--- a/main.ipynb
+++ b/main.ipynb
@@ -1,50 +1,134 @@
-%python
-# Install required packages
-%pip install google-cloud-bigquery google-auth
-dbutils.library.restartPython()
-
-from google.cloud import bigquery
-from google.oauth2 import service_account
-import pandas as pd
-from pyspark.sql import SparkSession
-import json
-
-# Service account key
-service_account_info = {
-  "type": "service_account",
-  "project_id": "project_id",
-  "private_key_id": "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
-  "private_key": "-----BEGIN PRIVATE KEY-----xxxxxxxxxxxxxxxxxxx\n-----END PRIVATE KEY-----\n",
-  "client_email": "databricks@project_id.iam.gserviceaccount.com",
-  "client_id": "1234567890",
-  "auth_uri": "https://accounts.google.com/o/oauth2/auth",
-  "token_uri": "https://oauth2.googleapis.com/token",
-  "auth_provider_x509_cert_url": "https://www.googleapis.com/oauth2/v1/certs",
-  "client_x509_cert_url": "https://www.googleapis.com/robot/v1/metadata/x509/databricks%40project_id.iam.gserviceaccount.com",
-  "universe_domain": "googleapis.com"
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "6f8cab48-0271-4a26-a362-91a8cbf1b141",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%python\n",
+    "# Install required packages\n",
+    "%pip install google-cloud-bigquery google-auth\n",
+    "dbutils.library.restartPython()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "284c9071-6f37-4410-a04c-917e81f0f71e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "%python\n",
+    "from google.cloud import bigquery\n",
+    "from google.oauth2 import service_account\n",
+    "import pandas as pd\n",
+    "from pyspark.sql import SparkSession\n",
+    "import json\n",
+    "\n",
+    "# Service account key\n",
+    "service_account_info = {\n",
+    "  \"type\": \"service_account\",\n",
+    "  \"project_id\": \"project_id\",\n",
+    "  \"private_key_id\": \"xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\",\n",
+    "  \"private_key\": \"-----BEGIN PRIVATE KEY-----xxxxxxxxxxxxxxxxxxx\\n-----END PRIVATE KEY-----\\n\",\n",
+    "  \"client_email\": \"databricks@project_id.iam.gserviceaccount.com\",\n",
+    "  \"client_id\": \"1234567890\",\n",
+    "  \"auth_uri\": \"https://accounts.google.com/o/oauth2/auth\",\n",
+    "  \"token_uri\": \"https://oauth2.googleapis.com/token\",\n",
+    "  \"auth_provider_x509_cert_url\": \"https://www.googleapis.com/oauth2/v1/certs\",\n",
+    "  \"client_x509_cert_url\": \"https://www.googleapis.com/robot/v1/metadata/x509/databricks%40project_id.iam.gserviceaccount.com\",\n",
+    "  \"universe_domain\": \"googleapis.com\"\n",
+    "}\n",
+    "credentials = service_account.Credentials.from_service_account_info(service_account_info)\n",
+    "client = bigquery.Client(credentials=credentials, project=credentials.project_id)\n",
+    "\n",
+    "from pyspark.sql import functions as F\n",
+    "\n",
+    "# Query to retrieve data from BigQuery\n",
+    "query = \"\"\"\n",
+    "SELECT\n",
+    "  *\n",
+    "FROM project_id.analytics_GA4PROPERTYID.events_20241101;\n",
+    "\"\"\"\n",
+    "\n",
+    "# Temporary view name for the query result\n",
+    "view_name = \"temp_bigquery_ga4_tables\"\n",
+    "\n",
+    "query_job = client.query(query)\n",
+    "results = query_job.result()\n",
+    "\n",
+    "# Create a temporary SQL view\n",
+    "rows = [dict(row) for row in results]\n",
+    "df = pd.DataFrame(rows)\n",
+    "spark = SparkSession.builder.appName(\"BigQueryToDatabricks\").getOrCreate()\n",
+    "spark_df = spark.createDataFrame(df)\n",
+    "spark_df = spark_df.withColumn(\"event_datetime\", F.to_utc_timestamp(F.from_unixtime(F.col(\"event_timestamp\") / 1000000, 'yyyy-MM-dd HH:mm:ss'), 'UTC'))\n",
+    "spark_df.createOrReplaceTempView(view_name)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "65dbb0e7-711a-4356-8dcf-660f78f5c854",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "with ga AS(\n",
+    "  SELECT * FROM temp_bigquery_ga4_tables  -- change this view name to the view you created in the previous cell\n",
+    ")\n",
+    "SELECT  ga.*\n",
+    "FROM ga\n",
+    ";"
+   ]
+  }
+ ],
+ "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "computePreferences": null,
+   "dashboards": [],
+   "environmentMetadata": {
+    "base_environment": "",
+    "client": "1"
+   },
+   "language": "python",
+   "notebookMetadata": {
+    "pythonIndentUnit": 4
+   },
+   "notebookName": "Untitled Notebook 2024-12-23 17:29:19",
+   "widgets": {}
+  },
+  "language_info": {
+   "name": "python"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
 }
-credentials = service_account.Credentials.from_service_account_info(service_account_info)
-client = bigquery.Client(credentials=credentials, project=credentials.project_id)
-
-from pyspark.sql import functions as F
-
-# Query to retrieve data from BigQuery
-query = """
-SELECT
-  *
-FROM project_id.analytics_GA4PROPERTYID.events_20241101;
-"""
-
-# Temporary view name for the query result
-view_name = "temp_bigquery_ga4_tables"
-
-query_job = client.query(query)
-results = query_job.result()
-
-# Create a temporary SQL view
-rows = [dict(row) for row in results]
-df = pd.DataFrame(rows)
-spark = SparkSession.builder.appName("BigQueryToDatabricks").getOrCreate()
-spark_df = spark.createDataFrame(df)
-spark_df = spark_df.withColumn("event_datetime", F.to_utc_timestamp(F.from_unixtime(F.col("event_timestamp") / 1000000, 'yyyy-MM-dd HH:mm:ss'), 'UTC'))
-spark_df.createOrReplaceTempView(view_name)
